--- a/rubidium.html
+++ b/rubidium.html
@@ -106,6 +106,13 @@
     box-shadow: 0 0 8px #4dabf7;
   }
 
+  /* Valence electron styling */
+  .valence-electron {
+    background-color: #f9f871; /* bright yellow */
+    box-shadow: 0 0 15px 5px #f9f871;
+    animation: spin linear infinite;
+  }
+
   /* First shell - 2 electrons */
   .orbit.one .electron:nth-child(1) {
     --radius: 70px;
@@ -331,12 +338,16 @@
     transform: rotate(315deg) translateX(var(--radius));
   }
 
-  /* Fifth shell - 1 electron */
+  /* Fifth shell - 1 valence electron */
   .orbit.five .electron:nth-child(1) {
     --radius: 230px;
     animation-duration: 6s;
     animation-delay: 0s;
     transform: rotate(0deg) translateX(var(--radius));
+  }
+  .orbit.five .electron:nth-child(1).valence-electron {
+    background-color: #f9f871; /* bright yellow */
+    box-shadow: 0 0 15px 5px #f9f871;
   }
 
   @keyframes spin {
@@ -365,6 +376,7 @@
 
   .key-nucleus { background: radial-gradient(circle, #ff6b6b, #d00000); }
   .key-electron { background: #4dabf7; box-shadow: 0 0 4px #4dabf7; }
+  .key-valence { background: #f9f871; box-shadow: 0 0 8px #f9f871; }
   .key-orbit { background: none; border: 1px dashed rgba(255,255,255,0.4); width: 15px; height: 15px; border-radius: 50%; }
 </style>
 </head>
@@ -424,13 +436,14 @@
     </div>
 
     <div class="orbit five">
-      <div class="electron"></div>
+      <div class="electron valence-electron"></div>
     </div>
   </div>
 
   <div class="key">
     <div class="key-item"><div class="key-color key-nucleus"></div> Nucleus</div>
     <div class="key-item"><div class="key-color key-electron"></div> Electron</div>
+    <div class="key-item"><div class="key-color key-valence"></div> Valence Electron</div>
     <div class="key-item"><div class="key-color key-orbit"></div> Electron Orbital</div>
   </div>
 </body>
