--- a/francium.html
+++ b/francium.html
@@ -66,40 +66,13 @@
     transform: translate(-50%, -50%);
   }
 
-  .orbit.one {
-    width: 120px;
-    height: 120px;
-  }
-
-  .orbit.two {
-    width: 170px;
-    height: 170px;
-  }
-
-  .orbit.three {
-    width: 220px;
-    height: 220px;
-  }
-
-  .orbit.four {
-    width: 260px;
-    height: 260px;
-  }
-
-  .orbit.five {
-    width: 300px;
-    height: 300px;
-  }
-
-  .orbit.six {
-    width: 340px;
-    height: 340px;
-  }
-
-  .orbit.seven {
-    width: 370px;
-    height: 370px;
-  }
+  .orbit.one { width: 120px; height: 120px; }
+  .orbit.two { width: 170px; height: 170px; }
+  .orbit.three { width: 220px; height: 220px; }
+  .orbit.four { width: 260px; height: 260px; }
+  .orbit.five { width: 300px; height: 300px; }
+  .orbit.six { width: 340px; height: 340px; }
+  .orbit.seven { width: 370px; height: 370px; }
 
   /* Electrons */
   .electron {
@@ -113,6 +86,15 @@
     margin: -10px;
     animation: spin linear infinite;
     box-shadow: 0 0 8px #4dabf7;
+  }
+
+  /* Valence electron styling (bright yellow glow) */
+  .valence-electron {
+    background-color: #ffeb3b;
+    box-shadow:
+      0 0 6px #ffeb3b,
+      0 0 10px #fff176,
+      0 0 20px #fffde7;
   }
 
   /* First shell - 2 electrons */
@@ -410,37 +392,37 @@
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -0.75s;
-    transform: rotate(90deg) translateX(var(--radius));
+    transform: rotate(45deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(3) {
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -1.5s;
-    transform: rotate(180deg) translateX(var(--radius));
+    transform: rotate(90deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(4) {
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -2.25s;
-    transform: rotate(270deg) translateX(var(--radius));
+    transform: rotate(135deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(5) {
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -3s;
-    transform: rotate(45deg) translateX(var(--radius));
+    transform: rotate(180deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(6) {
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -3.75s;
-    transform: rotate(135deg) translateX(var(--radius));
+    transform: rotate(225deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(7) {
     --radius: 150px;
     animation-duration: 6s;
     animation-delay: -4.5s;
-    transform: rotate(225deg) translateX(var(--radius));
+    transform: rotate(270deg) translateX(var(--radius));
   }
   .orbit.five .electron:nth-child(8) {
     --radius: 150px;
@@ -459,112 +441,115 @@
   .orbit.six .electron:nth-child(2) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -0.388s;
-    transform: rotate(40deg) translateX(var(--radius));
+    animation-delay: -0.39s;
+    transform: rotate(20deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(3) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -0.776s;
-    transform: rotate(80deg) translateX(var(--radius));
+    animation-delay: -0.78s;
+    transform: rotate(40deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(4) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -1.164s;
-    transform: rotate(120deg) translateX(var(--radius));
+    animation-delay: -1.17s;
+    transform: rotate(60deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(5) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -1.552s;
-    transform: rotate(160deg) translateX(var(--radius));
+    animation-delay: -1.56s;
+    transform: rotate(80deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(6) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -1.94s;
-    transform: rotate(200deg) translateX(var(--radius));
+    animation-delay: -1.95s;
+    transform: rotate(100deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(7) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -2.328s;
-    transform: rotate(240deg) translateX(var(--radius));
+    animation-delay: -2.34s;
+    transform: rotate(120deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(8) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -2.716s;
-    transform: rotate(280deg) translateX(var(--radius));
+    animation-delay: -2.73s;
+    transform: rotate(140deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(9) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -3.104s;
-    transform: rotate(320deg) translateX(var(--radius));
+    animation-delay: -3.12s;
+    transform: rotate(160deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(10) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -3.492s;
-    transform: rotate(360deg) translateX(var(--radius));
+    animation-delay: -3.51s;
+    transform: rotate(180deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(11) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -3.88s;
-    transform: rotate(20deg) translateX(var(--radius));
+    animation-delay: -3.9s;
+    transform: rotate(200deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(12) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -4.268s;
-    transform: rotate(60deg) translateX(var(--radius));
+    animation-delay: -4.29s;
+    transform: rotate(220deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(13) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -4.656s;
-    transform: rotate(100deg) translateX(var(--radius));
+    animation-delay: -4.68s;
+    transform: rotate(240deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(14) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -5.044s;
-    transform: rotate(140deg) translateX(var(--radius));
+    animation-delay: -5.07s;
+    transform: rotate(260deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(15) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -5.432s;
-    transform: rotate(180deg) translateX(var(--radius));
+    animation-delay: -5.46s;
+    transform: rotate(280deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(16) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -5.82s;
-    transform: rotate(220deg) translateX(var(--radius));
+    animation-delay: -5.85s;
+    transform: rotate(300deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(17) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -6.208s;
-    transform: rotate(260deg) translateX(var(--radius));
+    animation-delay: -6.24s;
+    transform: rotate(320deg) translateX(var(--radius));
   }
   .orbit.six .electron:nth-child(18) {
     --radius: 170px;
     animation-duration: 7s;
-    animation-delay: -6.596s;
-    transform: rotate(300deg) translateX(var(--radius));
+    animation-delay: -6.63s;
+    transform: rotate(340deg) translateX(var(--radius));
   }
 
-  /* Seventh shell - 1 electron */
+  /* Seventh shell - 1 electron (valence electron) */
   .orbit.seven .electron:nth-child(1) {
     --radius: 185px;
     animation-duration: 8s;
     animation-delay: 0s;
     transform: rotate(0deg) translateX(var(--radius));
+  }
+  .orbit.seven .electron:nth-child(1).valence-electron {
+    /* Additional styling handled by .valence-electron class */
   }
 
   @keyframes spin {
@@ -593,6 +578,7 @@
 
   .key-nucleus { background: radial-gradient(circle, #ff6b6b, #d00000); }
   .key-electron { background: #4dabf7; box-shadow: 0 0 4px #4dabf7; }
+  .key-valence { background: #ffeb3b; box-shadow: 0 0 6px #ffeb3b, 0 0 10px #fff176; }
   .key-orbit { background: none; border: 1px dashed rgba(255,255,255,0.4); width: 15px; height: 15px; border-radius: 50%; }
 </style>
 </head>
@@ -694,13 +680,14 @@
     </div>
 
     <div class="orbit seven">
-      <div class="electron"></div>
+      <div class="electron valence-electron"></div>
     </div>
   </div>
 
   <div class="key">
     <div class="key-item"><div class="key-color key-nucleus"></div> Nucleus</div>
     <div class="key-item"><div class="key-color key-electron"></div> Electron</div>
+    <div class="key-item"><div class="key-color key-valence"></div> Valence Electron</div>
     <div class="key-item"><div class="key-color key-orbit"></div> Electron Orbital</div>
   </div>
 </body>
