--- a/quiz.html
+++ b/quiz.html
@@ -6,52 +6,84 @@
   <title>Group 1 Quiz</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f9fafb;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f4f6f8;
       margin: 0;
-      padding: 1rem;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+      min-height: 100vh;
     }
     h1 {
-      text-align: center;
+      color: #0d47a1;
       margin-bottom: 1rem;
+      font-weight: 700;
+      font-size: 2rem;
     }
     .question {
       background: white;
-      border-radius: 0.5rem;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      width: 360px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      padding: 1.2rem 1.5rem;
+      box-sizing: border-box;
+      user-select: none;
+    }
+    .question h2 {
+      margin: 0 0 1rem 0;
+      font-weight: 600;
+      color: #1565c0;
+      font-size: 1.1rem;
     }
     .options {
       display: flex;
-      gap: 0.5rem;
       flex-wrap: wrap;
-      margin-top: 0.5rem;
+      gap: 0.75rem;
     }
     .option-btn {
-      flex: 1 1 auto;
-      padding: 0.5rem 1rem;
+      flex: 1 1 calc(50% - 0.75rem);
+      padding: 0.6rem 1rem;
       border: none;
-      border-radius: 0.3rem;
+      border-radius: 8px;
+      background-color: #e3f2fd;
+      color: #0d47a1;
       cursor: pointer;
-      transition: all 0.3s ease;
-      background-color: #e5e7eb;
+      font-weight: 600;
+      box-shadow: 0 4px 8px rgba(21, 101, 192, 0.2);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      text-align: center;
     }
-    .option-btn:hover {
-      background-color: #d1d5db;
+    .option-btn:hover:not(:disabled) {
+      background-color: #bbdefb;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(21, 101, 192, 0.3);
+    }
+    .option-btn:disabled {
+      cursor: default;
+      opacity: 0.85;
     }
     .selected {
-      outline: 3px solid #3b82f6;
+      outline: 3px solid #1565c0;
+      font-weight: 700;
     }
     .correct {
       background-color: #bbf7d0 !important;
+      color: #2e7d32;
+      box-shadow: 0 4px 10px rgba(46, 125, 50, 0.3);
     }
     .incorrect {
       background-color: #fecaca !important;
+      color: #b71c1c;
+      box-shadow: 0 4px 10px rgba(183, 28, 28, 0.3);
     }
     .feedback {
-      margin-top: 0.5rem;
-      font-weight: bold;
+      margin-top: 0.75rem;
+      font-weight: 600;
+      color: #333;
+      font-size: 0.95rem;
+      user-select: text;
     }
   </style>
 </head>
@@ -130,7 +162,7 @@
             questionText: q.question,
             selectedOption: option,
             isCorrect: (option === q.answer).toString(),
-            userId: "Anonymous" // replace if you want to track users differently
+            userId: "Anonymous" // replace with actual user id logic if needed
           });
 
           // Send GET request to Google Apps Script web app
