--- a/quiz.html
+++ b/quiz.html
@@ -24,7 +24,7 @@
     }
     .question {
       background: white;
-      width: 360px;
+      width: 600px; /* wider width */
       border-radius: 12px;
       box-shadow: 0 8px 16px rgba(0,0,0,0.1);
       padding: 1.2rem 1.5rem;
