--- a/quiz.html
+++ b/quiz.html
@@ -60,45 +60,118 @@
   .option-btn:hover {
     background-color: #bbdefb;
   }
+  .option-btn.selected {
+    outline: 3px solid #3b82f6;
+  }
+  .option-btn.correct {
+    background-color: #bbf7d0 !important;
+  }
+  .option-btn.incorrect {
+    background-color: #fecaca !important;
+  }
+  .feedback {
+    margin-top: 0.5rem;
+    font-weight: bold;
+    color: #333;
+  }
 </style>
 </head>
 <body>
   <div class="container">
     <h1>Group 1 Trends Quiz</h1>
-    <div id="quiz">
-      <div class="question">
-        <h2>1. As you go down Group 1, what happens to the boiling point?</h2>
-        <div class="options">
-          <button class="option-btn">Increases</button>
-          <button class="option-btn">Decreases</button>
-          <button class="option-btn">Stays the same</button>
-        </div>
-      </div>
-      <div class="question">
-        <h2>2. As you go down Group 1, what happens to the melting point?</h2>
-        <div class="options">
-          <button class="option-btn">Increases</button>
-          <button class="option-btn">Decreases</button>
-          <button class="option-btn">Stays the same</button>
-        </div>
-      </div>
-      <div class="question">
-        <h2>3. As you go down Group 1, what happens to the density?</h2>
-        <div class="options">
-          <button class="option-btn">Increases</button>
-          <button class="option-btn">Decreases</button>
-          <button class="option-btn">Stays the same</button>
-        </div>
-      </div>
-      <div class="question">
-        <h2>4. As you go down Group 1, what happens to the atomic radius?</h2>
-        <div class="options">
-          <button class="option-btn">Increases</button>
-          <button class="option-btn">Decreases</button>
-          <button class="option-btn">Stays the same</button>
-        </div>
-      </div>
-    </div>
+    <div id="quiz"></div>
   </div>
+
+  <script>
+    const quizData = [
+      {
+        question: "As you go down Group 1, what happens to the boiling point?",
+        options: ["Increases", "Decreases", "Stays the same"],
+        answer: "Decreases",
+        explanation: "Boiling point decreases down Group 1 because atoms become larger, weakening the metallic bonds."
+      },
+      {
+        question: "As you go down Group 1, what happens to the melting point?",
+        options: ["Increases", "Decreases", "Stays the same"],
+        answer: "Decreases",
+        explanation: "Melting point decreases due to weaker metallic bonds caused by increased atomic size."
+      },
+      {
+        question: "As you go down Group 1, what happens to the density?",
+        options: ["Increases", "Decreases", "Stays the same"],
+        answer: "Increases",
+        explanation: "Density increases because mass increases faster than volume as atoms get bigger."
+      },
+      {
+        question: "As you go down Group 1, what happens to the atomic radius?",
+        options: ["Increases", "Decreases", "Stays the same"],
+        answer: "Increases",
+        explanation: "Atomic radius increases due to the addition of more electron shells."
+      }
+    ];
+
+    const quizContainer = document.getElementById("quiz");
+
+    quizData.forEach((q, i) => {
+      const questionDiv = document.createElement("div");
+      questionDiv.className = "question";
+
+      const qTitle = document.createElement("h2");
+      qTitle.textContent = `${i + 1}. ${q.question}`;
+      questionDiv.appendChild(qTitle);
+
+      const optionsDiv = document.createElement("div");
+      optionsDiv.className = "options";
+
+      q.options.forEach(option => {
+        const btn = document.createElement("button");
+        btn.className = "option-btn";
+        btn.textContent = option;
+
+        btn.addEventListener("click", () => {
+          const allButtons = optionsDiv.querySelectorAll("button");
+          allButtons.forEach(b => {
+            b.disabled = true;
+            if (b.textContent === q.answer) {
+              b.classList.add("correct");
+            }
+          });
+
+          btn.classList.add("selected");
+          if (option !== q.answer) {
+            btn.classList.add("incorrect");
+          }
+
+          const feedback = document.createElement("div");
+          feedback.className = "feedback";
+          feedback.textContent = q.explanation;
+          questionDiv.appendChild(feedback);
+
+          // Prepare URL query parameters for Google Apps Script logging
+          const params = new URLSearchParams({
+            questionNumber: (i + 1).toString(),
+            questionText: q.question,
+            selectedOption: option,
+            isCorrect: (option === q.answer).toString(),
+            userId: "Anonymous" // Replace with actual user ID if desired
+          });
+
+          fetch("https://script.google.com/macros/s/AKfycbyYgxc2hP-4GSQVxkGN4NMWnbnHxkBagewtLArGqRZwM4aKhtxHmCXTnypoQE_Ua14sug/exec?" + params.toString())
+            .then(response => response.text())
+            .then(text => {
+              console.log("Server response:", text);
+            })
+            .catch(err => {
+              console.error("Error sending data:", err);
+            });
+        });
+
+        optionsDiv.appendChild(btn);
+      });
+
+      questionDiv.appendChild(optionsDiv);
+      quizContainer.appendChild(questionDiv);
+    });
+  </script>
 </body>
 </html>
