--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     }
 
     main {
-      max-width: 1000px;
-      width: 95%;
-      margin: 2rem auto 4rem;
-      padding: 1rem;
+      width: 100vw;
+      max-width: 100%;
+      margin: 2rem 0 4rem;
+      padding: 1rem 2rem;
       background: #ffffffdd;
       border-radius: 12px;
       box-shadow: 0 8px 20px rgb(0 0 0 / 0.1);
+      box-sizing: border-box;
     }
 
     h2 {
