--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <section id="overview">
         <h2>Overview of Group 1 Metals</h2>
-        <p>Group 1 metals, also known as alkali metals, are highly reactive elements found in the first column of the periodic table.</p>
+        <p>Group 1 metals, also called alkali metals, are highly reactive elements found in the first column of the periodic table.</p>
         <ul>
-            <li>Includes: Lithium (Li), Sodium (Na), Potassium (K), Rubidium (Rb), Cesium (Cs), Francium (Fr)</li>
+            <li>Includes: Lithium, Sodium, Potassium, Rubidium, Cesium, Francium</li>
             <li>Soft metals, low melting points, react strongly with water</li>
-            <li>Trend: Reactivity increases down the group</li>
+            <li>Reactivity increases down the group</li>
         </ul>
     </section>
 
     <section id="metals">
-        <h2>Group 1 Metals</h2>
+        <h2>Interactive Metal Grid</h2>
         <div class="metal-grid" id="metal-grid">
-            <!-- JS will generate metal boxes here -->
+            <!-- Metal boxes generated via JS -->
         </div>
         <div id="metal-info">
             <h3>Metal Info</h3>
