--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <p id="metal-properties"></p>
         </div>
     </section>
+    <div id="reaction-container">
+        <h3>Reaction Simulation</h3>
+        <div id="reaction-area"></div>
+    </div>
 
     <section id="quiz">
         <h2>Quick Quiz</h2>
@@ -56,3 +60,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
