--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
     <section id="metals">
         <h2>Interactive Metal Grid</h2>
-        <div class="metal-grid" id="metal-grid">
-            <!-- Metal boxes generated via JS -->
-        </div>
+        <div class="metal-grid" id="metal-grid"></div>
+
         <div id="metal-info">
             <h3>Metal Info</h3>
             <p id="metal-name">Hover over a metal</p>
             <p id="metal-properties"></p>
         </div>
+
+        <div id="reaction-container">
+            <h3>Reaction Simulation</h3>
+            <div id="reaction-area"></div>
+        </div>
     </section>
-    <div id="reaction-container">
-        <h3>Reaction Simulation</h3>
-        <div id="reaction-area"></div>
-    </div>
 
     <section id="quiz">
         <h2>Quick Quiz</h2>
@@ -60,4 +60,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
